<resources>
    <string name="app_name">Rahaty Driver</string>
    <string name="arbic">عربي</string>
    <string name="english">English</string>
    <string name="instructions">Instructions</string>
    <string name="about">About APP</string>
    <string name="messagesucess">Done successfuly</string>
    <string name="item_Home">Home</string>
    <string name="item_Myorders">My orders</string>
    <string name="item_contact">Contact us</string>
    <string name="item_MyInfo">My infos</string>
    <string name="item_Notif">Notifications</string>
    <string name="txt_terms">Terms and condition</string>
    <string name="callfriends">Invite friends</string>
    <string name="sgnout">Deconnection</string>

    <string name="txt_phone">Phone </string>
    <string name="txt_email">Email </string>
    <string name="text_password">Password </string>
    <string name="text_forgetpass">Forget password? </string>
    <string name="text_remeberme">Remember me </string>
    <string name="text_signin">Sign in</string>
    <string name="text_register">Create a new account</string>
    <string name="validation_mobile">Please, enter a valid phone number</string>
    <string name="nonEmpty">Please, enter the filed</string>
    <string name="validation_number_length">Please, enter the password with at least 4 characters</string>

    <string name="error_happen">Something wrong happen please try again later  </string>
    <string name="authontiation">Authonticaion failure happen enter user name  and password again</string>
    <string name="servererror">Server error happen</string>
    <string name="selectTime">Select Time</string>
    <string name="networkerror">Network error happen</string>
    <string name="decription">Please fill all descriptions fields </string>
    <string name="serviceerror">Please at least choose one service  </string>
    <string name="timeouterror"> Sending tie take than  useual</string>
    <string name="usernameandpassword">Please make sure of user name and password</string>

    <string name="text_fname">Name</string>
    <string name="text_retype_password">Re-type password</string>
    <string name="txt_next">Next</string>
    <string name="txt_validate">Validate</string>
    <string name="txt_msg">Please enter the validate code</string>
    <string name="txt_code">Validate Code</string>
    <string name="item_create_account">Create account</string>
    <string name="validation_valid_password">Enter a password contain at least 8 places  </string>
    <string name="txt_nul_sachi"> Picture of S</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="txt_change_pwd">Change the password</string>
    <string name="txt_back">Back</string>
    <string name="txt_save">Save</string>

    <string name="tab_urgorder">Pending</string>
    <string name="tab_normlorder">Running</string>
    <string name="tab_lastorder">Done</string>
    <string name="txt_share">share</string>
    <string name="txt_copier">copier</string>
    <string name="lien_share">Link for share</string>

    <string name="txt_send">Send</string>
    <string name="txt_title_msg">Title of the message ...</string>
    <string name="txt__msg">Body of the message ...</string>
    <string name="txt_adr_gov">Picture of the municipality</string>
    <string name="txt_adr_num">House, street and area number</string>
    <string name="abotuTax">•	التطبيق  تفاعلي ديناميكي يقدم خدمات توصيل للشركات والمؤسسات والصيدليات والبقالات وغيره من الخدمات     وقابل للتحديث  .. وسيتم تصميم وبرمجة التطبيق  باستخدام أفضل التقنيات الحديثة </string>
    <string name="lien_msg">Copy this link and send it to your friends to register</string>
    <string name="txt_last_order">Subsequent Order</string>
    <string name="urgent">Urgent</string>
    <string name="normal">normal</string>
    <string name="txt_current_order">Current Order</string>
    <string name="card">Shopping cart</string>
    <string name="txt_order_now">Order now</string>
    <string name="txt_order_desc">Order description</string>
    <string name="txt_login">Log in</string>
    <string name="txt_hello">Hello ...</string>
    <string name="messagespinner">Please make sure you have select  your city    </string>
    <string name="Vlaid_match_password">Password dosent match</string>
    <string name="requestNumber">Request number</string>
    <string name="requestMsg"> The request is being processed</string>
    <string name="requestPendingMsg">Waiting for the technician</string>
    <string name="ok"> OK</string>
    <string name="confirmOrder">Order was accepted</string>
    <string name="callCustomer">  Call driver</string>
    <string name="accept"> Accept Order</string>
    <string name="txtDate">  Choose day</string>
    <string name="txtTime">  Choose time</string>
    <string name="rewuestNO"><![CDATA[<p style="text-align:justify;">Your order has been successfully sent <br/> #%1$s <br/> You will be contacted by Our technical team<p>]]></string>
    <string name="rewuesttxt">You will be contacted by Our technical team </string>
    <string name="cancelOrder">Cancel order </string>
    <string name="orderWaiting">Waiting for acceptance</string>
    <string name="txt_confirm_cancel">Are you sure you want to cancel this order?</string>
    <string name="ordercanceled">Cancel Order</string>
    <string name="ordercanceledmessage">You Cancel Order Number </string>
    <string name="txt_okrequest">Request Delivered</string>
    <string name="orderstate">طلب حالي  %1$s رقم </string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="txt_loading">Loading...</string>
    <string name="followMsg">Follow technical</string>
    <string name="txtDone">Request Done number %1$s </string>
    <string name="txt_loading_position">Detect location...</string>
    <string name="txtRaiting">Please rate the technical</string>
    <string name="remarks"> Remarks ...</string>
    <string name="finish_order"> Order </string>
    <string name="invalidePhoneNumber">Invalide phone number </string>
    <string name="text_forgot_password">The password will be sent to your phone by SMS</string>
    <string name="txt_order_refuse">Refuse Order</string>
    <string name="txt_order_detail">Order details</string>
    <string name="add_cart">Add to cart</string>
    <string name="order_price">Order amount   :</string>
    <string name="total_price">The total amount</string>
    <string name="deliver_price">Delivery amount   :</string>
    <string name="send_request">Submit request</string>
    <string name="accept_order">Your request has been accepted</string>
    <string name="map_msg">Please specify your location to get orders</string>
    <string name="from_provider">From your service provider</string>
    <string name="delete_order">Request deleted in </string>
    <string name="time">time</string>
    <string name="now_orders">Current orders</string>
    <string name="last_orders">My subsequent orders</string>
    <string name="stop_get_orders">Stop receiving requests</string>
    <string name="account">My account</string>
    <string name="ryal">Ryal</string>
    <string name="txt1">2 Gaz </string>
    <string name="delevering">Delevering</string>
    <string name="sum">Total</string>
    <string name="send_notif">Send alert to the customer</string>
    <string name="timing">You have 3 minutes to accept the request</string>
    <string name="congratulation">Congratulations</string>
    <string name="accept_order_">You have accepted the Order </string>
    <string name="time_to_delever">Please specify the estimated duration of delivery</string>
    <string name="validate">Validate</string>
    <string name="minute">Minutes</string>
    <string name="time_to_delevering">Your order will be delivered in</string>
    <string name="current_balance">Your current balance</string>
    <string name="order_balance">Order balance</string>
    <string name="done_orders">Orders executed</string>
    <string name="app_balance">Application commission</string>
    <string name="close_get_orders">Close receive requests</string>
    <string name="question_close_order">Would you like to close receiving orders?</string>
    <string name="accept_">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="error_field_required">This field is required </string>
    <string name="text_code">Code</string>
    <string name="no_notif">You have any notifications</string>
    <string name="orders">Orders</string>
    <string name="loading">Loading. Please wait...</string>
    <string name="deleteOrder">Delete order</string>
    <string name="success_delete_order">Your request has been successfully deleted</string>
    <string name="error_number_5">The number of minutes should not be less than 5 minutes</string>
    <string name="txtexcute">you  can  accept order after %1$s seconds</string>
    <string name="finish_timing">You can accept the request</string>
    <string name="error_password_match">Password does not match</string>
    <string name="profile">Profile</string>
    <string name="accept_order_success">Request has been successfully accepted</string>
    <string name="deliver_success">Request was successfully delivred</string>
    <string name="cancel_sucess">Request canceled successfully</string>
    <string name="txt_no_data">No data available for now</string>
</resources>
