<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/full_round_rect_shape_white"

    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@mipmap/key"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/close_get_orders"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textColor="@color/green"/>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/question_close_order"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimary"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"

        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/accept_"
            android:textColor="@android:color/white"
            android:background="@drawable/round_rectangle_blue"
            android:layout_weight="0.5"
            android:id="@+id/btn_accept"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/refuse"
            android:textColor="@android:color/white"
            android:background="@drawable/full_roundrectangle_darkgrey"
            android:layout_weight="0.5"
            android:id="@+id/btn_refuse"/>

    </LinearLayout>


</LinearLayout>