<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/full_round_rect_shape_white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/done"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/congratulation"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/green"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:text="@string/accept_order_"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"

            android:id="@+id/txt_id_order"
            android:textColor="@color/red"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/time_to_delever"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time_to_delevering"
            android:layout_marginRight="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:textColor="@color/colorPrimary"/>
        <EditText
            android:layout_width="53dp"
            android:layout_height="43dp"
            android:layout_marginRight="7dp"
            android:layout_marginEnd="7dp"
            android:inputType="number"
            android:gravity="center"
            android:id="@+id/edt_time"
            android:textColor="@color/colorPrimary"
            android:imeOptions="actionDone"
            android:background="@drawable/round_black_rect_shape"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="7dp"
            android:layout_marginEnd="7dp"
            android:text="@string/minute"
            android:textColor="@color/colorLightOrange"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"

        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/validate"
            android:textColor="@android:color/white"
            android:background="@drawable/round_rectangle_blue"

            android:id="@+id/btn_accept"/>
    </LinearLayout>




</LinearLayout>