<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_choose_language"
    android:background="@mipmap/port"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="false"
    android:layout_height="match_parent">
    <!--include
        layout="@layout/toolbar_top"
        android:layout_width="match_parent"

        android:id="@+id/include2"
        android:layout_height="match_parent" /-->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn_go"
        android:layout_alignRight="@+id/btn_go"
        android:layout_marginTop="26dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateTint="@android:color/white" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"

        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/txt_login"
            android:layout_marginBottom="20dp"
            android:textSize="18dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etphone"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:hint="@string/txt_phone"
            android:background="@drawable/full_rectangle_white"
            android:layout_marginBottom="10dp"
            android:inputType="phone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:hint="@string/text_password"
            android:background="@drawable/full_rectangle_white"
            android:inputType="textPassword"
            android:id="@+id/etPassword"
            android:layout_marginBottom="11dp"  />


        <Button
            android:text="@string/text_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signin"
            android:textColor="@android:color/white"
            android:background="@drawable/full_rectangle_blue"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"

                android:textColor="@android:color/white"
                android:buttonTint="@android:color/white"
                android:text="@string/text_remeberme" />

            <TextView
                android:id="@+id/btnForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"

                android:text="@string/text_forgetpass"

                android:textColor="@android:color/white"
                android:textSize="16dp" />

        </RelativeLayout>





    </LinearLayout>

</RelativeLayout>
