
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateTint="@color/colorAccent" />


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout4"
        android:layout_marginTop="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/txt_title_msg"
            android:inputType="text"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="6dp"
            android:paddingStart="6dp"
            android:background="@drawable/round_black_rect_shape"
            android:maxLines="1"
            android:id="@+id/et_title"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_black_rect_shape"
            android:hint="@string/txt__msg"
            android:inputType="text"
            android:lineSpacingExtra="8sp"
            android:paddingLeft="6dp"
            android:paddingStart="6dp"
            android:gravity="top"
            android:paddingTop="16dp"
            android:maxLines="35"
            android:minHeight="260dp"
            android:id="@+id/et_FeedBack"

            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btn_SendComplain"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:layout_alignParentBottom="true"
            android:background="@color/colorLightOrange"
            android:layout_marginTop="22dp"
            android:text="@string/txt_send"
            android:textColor="@android:color/white" />


    </LinearLayout>

</RelativeLayout>

